test/Errors/missing_end.m
function y = bad(x)
    if x > 0
        y = x;
